front translate encoding

--- a/pages/System/front_translate_twig.twig
+++ b/pages/System/front_translate_twig.twig
@@ -14,7 +14,7 @@
 
             <div class="box box-primary">
                 <div class="box-body">
-                    <table class="table table-condensed table-hover">
+                    <table class="table table-condensed table-hover table-bordered">
                         <thead>
                             <tr>
                                 <th>Source</th>
