--- a/pages/System/front_translate_twig.twig
+++ b/pages/System/front_translate_twig.twig
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="div1">
     <div class="col-md-2">
 
         <div class="box box-primary">
@@ -6,104 +6,114 @@
                 {{tree|raw}}
             </div>
         </div>
+
+        <div class="box box-primary">
+            <div class="box-body">
+                <div class="form-group">
+                    <label>Height</label>
+                    <input class="form-control" type="input" v-model="edit_height" />
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
     <div class="col-md-10">
 
-        <div id="div1">
 
-            <div class="box box-primary">
-                <div class="box-body">
-                    <table class="table table-condensed table-hover table-bordered">
-                        <thead>
-                            <tr>
-                                <th>Source</th>
-                                <th v-for="lang in langs" v-text="lang">
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr v-if="file">
-                                <td>
-                                    <button @click.prevent="onClickTranAll" class="btn btn-xs btn-primary">Translate all</button>
-                                </td>
-                                <td v-for="lang in langs">
-                                    <button @click.prevent="copyFromSource(lang)" class="btn btn-xs btn-primary">Copy from source</button>
-                                    <button @click.prevent="onClickTranSource(lang)" class="btn btn-xs btn-primary">Tran from Source</button>
+        <div class="box box-primary">
+            <div class="box-body">
+                <table class="table table-condensed table-hover table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Source</th>
+                            <th v-for="lang in langs" v-text="lang">
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-if="file">
+                            <td>
+                                <button @click.prevent="onClickTranAll" class="btn btn-xs btn-primary">Translate all</button>
+                            </td>
+                            <td v-for="lang in langs">
+                                <button @click.prevent="copyFromSource(lang)" class="btn btn-xs btn-primary">Copy from source</button>
+                                <button @click.prevent="onClickTranSource(lang)" class="btn btn-xs btn-primary">Tran from Source</button>
+                                <button @click.prevent="tranSrcIfEmpty(lang)" class="btn btn-xs btn-primary">Translate data if value is empty</button>
 
-                                    <button v-if="lang=='zh_CN'" @click.prevent="onClickAllT2S()" class="btn btn-xs btn-primary">T2S</button>
-                                    <button v-if="lang=='en_US'" @click.prevent="onClickAllT2E()" class="btn btn-xs btn-primary">T2E</button>
-                                    <button v-if="lang=='zh_HK'" @click.prevent="onClickAllE2T()" class="btn btn-xs btn-primary">E2T</button>
-                                    <button @click="saveTran(lang)" class="btn btn-xs btn-success">
-                                        <i class="fa fa-save"></i> Save</button>
-                                </td>
-                            </tr>
-                            <tr v-for="d in renderData">
+                                <button v-if="lang=='zh_CN'" @click.prevent="onClickAllT2S()" class="btn btn-xs btn-primary">T2S</button>
+                                <button v-if="lang=='en_US'" @click.prevent="onClickAllT2E()" class="btn btn-xs btn-primary">T2E</button>
+                                <button v-if="lang=='zh_HK'" @click.prevent="onClickAllE2T()" class="btn btn-xs btn-primary">E2T</button>
+                                <button @click="saveTran(lang)" class="btn btn-xs btn-success">
+                                    <i class="fa fa-save"></i> Save</button>
+                            </td>
+                        </tr>                
+                        <tr v-for="d in renderData">
 
-                                <td v-if="d.edit" :colspan="langs.length + 1">
-                                    
-                                    <textarea v-model="selected_data.msgstr[selected_lang]" class="form-control" style="height:500px" :placeholder="selected_lang"></textarea>
-                                    <button @click="onClickTran(selected_data,selected_lang)" class="btn btn-xs btn-success">Source</button>
-                                    <button v-if="selected_lang=='zh_CN'" @click.prevent="onClickT2S(selected_data)" class="btn btn-xs btn-success">T2S</button>
-                                    <button v-if="selected_lang=='en_US'" @click.prevent="onClickT2E(selected_data)" class="btn btn-xs btn-success">T2E</button>
-                                    <button v-if="selected_lang=='zh_HK'" @click.prevent="onClickE2T(selected_data)" class="btn btn-xs btn-success">E2T</button>
-                                </td>
+                            <td v-if="d.edit" :colspan="langs.length + 1">
+                                <button @click="onClickTran(selected_data,selected_lang)" class="btn btn-xs btn-success">Source</button>
+                                <button v-if="selected_lang=='zh_CN'" @click.prevent="onClickT2S(selected_data)" class="btn btn-xs btn-success">T2S</button>
+                                <button v-if="selected_lang=='en_US'" @click.prevent="onClickT2E(selected_data)" class="btn btn-xs btn-success">T2E</button>
+                                <button v-if="selected_lang=='zh_HK'" @click.prevent="onClickE2T(selected_data)" class="btn btn-xs btn-success">E2T</button>
+                                <button class="btn btn-xs btn-success" @click.prevent="selected_data = null"><i class="fa fa-check"></i></button>
+                                <textarea v-model="selected_data.msgstr[selected_lang]" class="form-control" :style="{height: edit_height+ 'px'}" :placeholder="selected_lang"></textarea>
+                            </td>
 
-                                <td v-if="!d.edit" style="width:100px" v-text="d.msgid"></td>
+                            <td v-if="!d.edit" style="width:100px" v-text="d.msgid"></td>
 
-                                <td style="cursor:pointer;" v-if="!d.edit" v-for="lang in langs" @click="clickData(d,lang)" :class="{active: ((selected_data==d) && (lang==selected_lang)) }">
-                                    <div style="text-overflow:ellipsis;overflow-y:auto;max-height:100px" v-text="d.msgstr[lang]" >
-                                        
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="box-footer" v-if="file">
-                    <button @click.prevent="saveTran()" class="btn btn-success">Save all</button>
-                </div>
+                            <td style="cursor:pointer;" v-if="!d.edit" v-for="lang in langs" @click="clickData(d,lang)" :class="{active: ((selected_data==d) && (lang==selected_lang)) }">
+                                <div style="text-overflow:ellipsis;overflow-y:auto;max-height:100px" v-text="d.msgstr[lang]">
+
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-
-
-            <div class="box box-primary" v-if="unuse">
-                <div class="box-header">
-                    <div class="box-title">
-                        Unuse
-                    </div>
-                </div>
-                <div class="box-body">
-                    <table class="table table-condensed table-hover" v-for="lang in langs">
-                        <thead>
-                            <tr>
-                                <th v-text="lang"></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr v-for="d in unuse[lang]">
-                                <td>
-                                    <table class="table table-condensed table-hover">
-                                        <thead>
-                                            <tr>
-                                                <th>msgid</th>
-                                                <th>msgstr</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr v-for="(msgid,i) in d.msgid">
-                                                <td v-text="msgid"></td>
-                                                <td v-text="d.msgstr[i]"></td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+            <div class="box-footer" v-if="file">
+                <button @click.prevent="saveTran()" class="btn btn-success">Save all</button>
             </div>
-
         </div>
+
+
+        <div class="box box-primary" v-if="unuse">
+            <div class="box-header">
+                <div class="box-title">
+                    Unuse
+                </div>
+            </div>
+            <div class="box-body">
+                <table class="table table-condensed table-hover" v-for="lang in langs">
+                    <thead>
+                        <tr>
+                            <th v-text="lang"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="d in unuse[lang]">
+                            <td>
+                                <table class="table table-condensed table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>msgid</th>
+                                            <th>msgstr</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr v-for="(msgid,i) in d.msgid">
+                                            <td v-text="msgid"></td>
+                                            <td v-text="d.msgstr[i]"></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
     </div>
 </div>
 
@@ -114,6 +124,7 @@
     var vm = new Vue({
         el: "#div1",
         data: {
+            edit_height: 300,
             file: null,
             langs: [],
             data: [],
@@ -124,14 +135,14 @@
             this.$http.get("System/front_translate_twig/getLang").then((resp) => {
                 this.langs = resp.body;
             });
-        },computed:{
-            renderData(){
-                var ds=[];
-                this.data.forEach((d)=>{
+        }, computed: {
+            renderData() {
+                var ds = [];
+                this.data.forEach((d) => {
                     ds.push(d);
-                    if(this.selected_data == d){
-                        var a=JSON.parse(JSON.stringify(d));
-                        a.edit=true;
+                    if (this.selected_data == d) {
+                        var a = JSON.parse(JSON.stringify(d));
+                        a.edit = true;
                         ds.push(a);
                     }
                 });
@@ -240,6 +251,20 @@
                         }).then((resp) => {
                             d.msgstr[lang] = resp.data.text;
                         });
+                    });
+                }
+            },tranSrcIfEmpty(lang){
+                if (confirm("Are you sure want to translation from source to " + lang)) {
+                    this.data.forEach((d) => {
+                        if(d.msgstr[lang].length==0){
+                            this.$http.post("System/front_translate_twig/googleTranslate", {
+                                from: 'auto',
+                                to: lang,
+                                text: d.msgid,
+                            }).then((resp) => {
+                                d.msgstr[lang] = resp.data.text;
+                            });
+                        }
                     });
                 }
             }, onClickTran(d, lang) {
