--- a/css/default.css
+++ b/css/default.css
@@ -50,18 +50,44 @@ span.select2{
 	z-index:99995
 }
 
+
 .dataTable .search-row input{
 	padding-left: 1px;
     padding-right: 1px;
     height: 25px!important;
 }
 
+
 .dataTable .search-row select{
 	padding: 0px 1px;
     height: 25px;
 }
 
-.dataTable tbody td{
-	white-space: nowrap;
-    padding: 1px 2px 1px 2px!important;
+table.dataTable>tbody>tr[role="row"]>td{
+    padding: 1px 2px 1px 2px
+}
+
+
+table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>td:first-child:before, table.dataTable.dtr-inline.collapsed>tbody>tr[role="row"]>th:first-child:before{
+	top: 4px;
+}
+
+.dataTables_wrapper div.dataTables_length{
+	text-align: right;
+}
+
+.dataTable .search-row input{
+	width:100%;
+}
+
+.dataTables_wrapper .dataTables_paginate{
+	text-align:left!important;
+}
+
+.dataTables_wrapper .dataTables_info{
+	text-align:right!important;
+}
+
+.dataTables_wrapper .search-row .select2-selection{
+	height:25px;
 }
