--- a/pages/User/profile.twig
+++ b/pages/User/profile.twig
@@ -60,7 +60,7 @@
                     me: {
                         registrationWebAuthn: {
                             __args: {
-                                attestion: info
+                                attestion: JSON.stringify(info)
                             }
                         }
                     }
