--- a/pages/User/test.twig
+++ b/pages/User/test.twig
@@ -1,6 +1,22 @@
-hello
-
-{% set u=_app.entity.Testing(2) %}
-{{u.name}}
-
-
+<script src="https://unpkg.com/vue"></script>
+<script src="https://unpkg.com/http-vue-loader"></script>
+<div id="div1">
+    <input is="icheck2" v-model="a" @input="actionChecked(a)" true-value="1" false-value=""></icheck2>
+</div>
+<script>
+    var vm = new Vue({
+        el: "#div1",
+        components: {
+            'icheck2': httpVueLoader("/alt/alt-component/src/icheck.vue")
+        },
+        data: {
+            a: '',
+            checkedNames: []
+        },
+        methods: {
+            actionChecked(a) {
+                console.log(this.a);
+            }
+        }
+    })
+</script>
