--- a/pages/UserGroup/ae_user.twig
+++ b/pages/UserGroup/ae_user.twig
@@ -1,37 +1,93 @@
-	<form method="post">
-<div class="box box-primary table-responsive">
-
-	<table class="table table-condensed table-hover">
-	<thead>
-		<tr>
-			<td></td>
-			{% for usergroup in usergroups %}
-			<td>{{usergroup.name}}</td>
-			{% endfor %}
-		</tr>
-	</thead>
-	<tbody>
-		{% for user in users %}
-		<tr>
-			<td>{{user}}</td>
-			{% for usergroup in usergroups %}
-			<td>
-				<input name="u[{{user.user_id}}][]" type="checkbox" class="iCheck" {{user.is(usergroup)?'checked':''}} value="{{usergroup.usergroup_id}}" />
-			</td>
-			{% endfor %}
-		</tr>
-		{% endfor %}
-	</tbody>
-
-</table>
+{% verbatim %}
 
 
+<div id="div1">
+	<div class="box box-primary">
+		<div class="box-body table-responsive">
+			<table class="table table-condensed table-hover">
+				<thead>
+					<tr>
+						<td></td>
+						<td v-for="ug in usergroups" v-text="ug.name"></td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr v-for="ul in uls">
+						<td v-text="ul.name"></td>
+						<td v-for="ug in usergroups">
+							<icheck :value="isUserGroup(ul,ug)" @input="onClickUserGroup(ul,ug,$event)"></icheck>
+						</td>
+					</tr>
+				</tbody>
 
-	<div class="box-footer">
-		<button class="btn btn-success">Submit</button>
+			</table>
+		</div>
+
 	</div>
-
-
 </div>
 
-</form>
+
+<script>
+	var vm = new Vue({
+		el: "#div1",
+		data: {
+			usergroups: [],
+			uls: []
+		}, created() {
+			this.$http.get("UserGroup/ae_user/data").then(resp => {
+				return resp.data;
+			}).then(resp => {
+				console.log(resp);
+				this.usergroups = resp.usergroups;
+				this.uls = resp.uls;
+
+			});
+		}, methods: {
+			isUserGroup(user, usergroup) {
+				if (user.usergroup_id.indexOf(usergroup.usergroup_id) >= 0) {
+					return true;
+				}
+				return false;
+			}, onClickUserGroup(user, usergroup, e) {
+				if (e) {
+
+					this.$gql.mutation("api", {
+						UserGroup: {
+							__args: {
+								usergroup_id: usergroup.usergroup_id
+							},
+							addUser: {
+								__args: {
+									user_id: user.user_id
+								}
+							}
+						}
+					}).then(resp => {
+						if (resp.data.error) {
+							alert(resp.data.error.message);
+						}
+					});
+				} else {
+					this.$gql.mutation("api", {
+						UserGroup: {
+							__args: {
+								usergroup_id: usergroup.usergroup_id
+							},
+							removeUser: {
+								__args: {
+									user_id: user.user_id
+								}
+							}
+						}
+					}).then(resp => {
+						if (resp.data.error) {
+							alert(resp.data.error.message);
+						}
+					});
+				}
+
+			}
+		}
+	})
+</script>
+{% endverbatim %}
