--- a/pages/EventLog/test.twig
+++ b/pages/EventLog/test.twig
@@ -1,15 +1,8 @@
-<script src="https://unpkg.com/vue"></script>
-<script src="https://unpkg.com/http-vue-loader"></script>
+<script>
 
-<div id="my-app">
-    <div is="alt-rt2"></div>
-</div>
+    function onClickSubmit(rt) {
 
-<script type="text/javascript">
-    new Vue({
-        el: '#my-app',
-        components: {
-            'alt-rt2': httpVueLoader('alt-component/src/RT2.vue')
-        }
-    });
+        console.log(rt.getChecked('cb_id'));
+
+    }
 </script>
