--- a/pages/ACL/edit.twig
+++ b/pages/ACL/edit.twig
@@ -1,6 +1,6 @@
 <div id="div1">
-    <div is="alt-box">
-        <div is="alt-box-body">
+    <div is="box">
+        <div is="box-body">
             <div class="form-horizontal clearfix">
 
                 <div class="form-group">
